[package]
name = "notion"
version = "0.5.1"
authors = ["Jake Swenson <jake@jakeswenson.com>"]
edition = "2018"
repository = "https://github.com/jakeswenson/notion"
readme = "README.md"

description = "A Notion Api Client"
license = "MIT"

[dependencies]
async-trait = "0.1.68"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde", "clock"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(target_os = "wasi")'.dependencies]
http_req_wasi = "0.10.2"

[target.'cfg(target_os = "wasi")'.dev-dependencies]
tokio_wasi = { version = "1", default-features = false, features = ["macros", "rt"] }

[target.'cfg(not(target_os = "wasi"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
cargo-husky = "1"
wiremock = "0.5.2"
anyhow = "1.0.40"
clap = { version = "4.0", features = ["derive"] }
skim = "0.10.2"
crossbeam-channel = "0.5"
toml = "0.5.8"

[dev-dependencies.config]
version = "0.11.0"
features = ["toml"]
